--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,13 @@
-.h2 {
-    padding-left: 40%;
-    border-bottom: 30cm;
-    color: brown;
-}
-
-body{
+body {
+    background-color: lightblue;
+  }
+  
+  h2 {
+    color: blueviolet;
     text-align: center;
-}
+  }
+  
+  p {
+    font-family: verdana;
+    font-size: 20px;
+  }
