--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,11 @@ body {
     text-align: center;
   }
   
+  h1 {
+    color: blueviolet;
+    text-align: center;
+  }
+
   p {
     font-family: verdana;
     font-size: 20px;
